# solidwurth-estimate

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: generate_print_fixtures.py
solidwurth_estimate/: hooks.py  modules.txt  patches.txt
solidwurth_estimate/controllers/: project_events.py
solidwurth_estimate/estimate/doctype/dpwh_pay_item/: dpwh_pay_item.json  dpwh_pay_item.py
solidwurth_estimate/estimate/doctype/estimate/: estimate.js  estimate.json  estimate.py
solidwurth_estimate/estimate/doctype/estimate_payment_term/: estimate_payment_term.json  estimate_payment_term.py
solidwurth_estimate/estimate/doctype/estimate_scope/: estimate_scope.js  estimate_scope.json  estimate_scope.py
solidwurth_estimate/estimate/doctype/estimate_scope_equipment/: estimate_scope_equipment.json  estimate_scope_equipment.py
solidwurth_estimate/estimate/doctype/estimate_scope_labor/: estimate_scope_labor.json  estimate_scope_labor.py
solidwurth_estimate/estimate/print_format/: cost_proposal.html  cost_proposal_bp.html  cost_proposal_bp_long.html  cost_proposal_long.html
solidwurth_estimate/fixtures/: custom_field.json  dpwh_pay_item.json  labor_role.json  price_list.json  print_format.json  role.json  workflow.json  workflow_action.json  workflow_state.json
solidwurth_estimate/patches/: fix_naming_series_autoname.py  fix_naming_series_format.py
solidwurth_estimate/setup/: create_scope_templates.py
solidwurth_estimate/tests/: test_estimate_behavior.py
solidwurth_estimate/utils/: jinja_methods.py
(+17 files in other folders)
