[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solidwurth_estimate"
version = "0.1.0"
description = "Custom estimation module for SolidWurth Corp."
authors = [
    { name = "SolidWurth Corp.", email = "jpp@solidwurth.co"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
